# Datus-agent-clickzetta

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BUILD.md  Dockerfile  LICENSE  Makefile  README.md  SubAgentBootstrap.md  build_pyc_package.py  build_pypi_package.py  debug_semantic_real_env.py  debug_volume_path_issue.py  docker_build.sh  formatter.sh  mcp_servers_config.json  pyproject.toml  pytest.ini  release_notes.md  requirements.txt  setup.py  test_semantic_files_direct.py  test_semantic_fixes_verification.py  test_semantic_integration_final.py  test_semantic_quick_verification.py
.github/: pr-title-checker-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  other.yml
.github/workflows/: main.yml  pr-title-checker.yml  python-format-check.yml  run-integration.yml  run-ut.yml
benchmark/semantic_layer/: success_story.csv  testing_set.csv
build_scripts/: .pypirc.template  Dockerfile  Dockerfile.bak.first  build_pypi_package.py  build_test_data.sh  docker_build.sh
conf/: agent.clickzetta.yml  agent.clickzetta.yml.example  agent.yml.build  agent.yml.example  agent.yml.qs  auth_clients.yml.example
datus/: __init__.py  main.py
datus/agent/: agent.py  evaluate.py  plan.py  reflect.py  workflow.py  workflow.yml
datus/api/: README.md  __init__.py  auth.py  models.py  server.py  service.py
datus/cli/: README.md  __init__.py  action_history_display.py  agent_commands.py  autocomplete.py  blocking_input_manager.py  chat_commands.py  cli_context.py  context_commands.py  context_screen.py  execution_state.py  generation_hooks.py  init.py  interactive_init.py  main.py  mcp_commands.py  metadata_commands.py  plan_hooks.py  repl.py  semantic_file_commands.py  sub_agent_commands.py  sub_agent_wizard.py  subject_rich_utils.py  web_chatbot.py  workflow_screen.py
datus/configuration/: README.md  agent_config.py  agent_config_loader.py  node_type.py
datus/models/: README.md  __init__.py  base.py  claude_model.py  dashscope_model.py  deepseek_model.py  gemini_model.py  mcp_result_extractors.py  mcp_utils.py  openai_compatible.py  openai_model.py  qwen_model.py  session_manager.py
datus/prompts/: __init__.py  compare_sql.py  compare_sql_with_mcp.py  extract_dates.py  fix_sql.py  gen_sql.py  generate_metrics_with_mcp.py  generate_semantic_model.py  output_checking.py  prompt_manager.py  reasoning_sql_with_mcp.py  reflection.py  schema_lineage.py  selection.py
datus/schemas/: __init__.py  action_history.py  agent_models.py  base.py  chat_agentic_node_models.py  compare_node_models.py  date_parser_node_models.py  doc_search_node_models.py  fix_node_models.py  gen_sql_agentic_node_models.py  generate_metrics_node_models.py  generate_semantic_model_node_models.py  node_models.py  parallel_node_models.py  reason_sql_node_models.py  schema_linking_node_models.py  search_metrics_node_models.py  semantic_agentic_node_models.py  semantic_model_node_models.py  sql_summary_agentic_node_models.py  subworkflow_node_models.py
datus/storage/: README.md  __init__.py  base.py  cache.py  catalog_manager.py  embedding_by_cloud.md  embedding_models.py  embedding_openai.py  fastembed_embeddings.py  lancedb_conditions.py  sentence_transformers.py  storage_cfg.py  sub_agent_kb_bootstrap.py  subject_manager.py
datus/tools/: __init__.py  base.py  context_search.py  date_parsing_tools.py  generation_tools.py  mcp_server.py  plan_tools.py  tools.py  tools_mcp_server.py
datus/utils/: __init__.py  async_utils.py  benchmark_utils.py  compress_utils.py  constants.py  device_utils.py  env.py  exceptions.py  json_utils.py  loggings.py  path_manager.py  path_utils.py  pyarrow_utils.py  reference_paths.py  rerankers.py  resource_utils.py  rich_util.py  schema_utils.py  sql_utils.py  sub_agent_manager.py  time_utils.py  token_utils.py  traceable_utils.py  typing_compat.py  typing_fix.py
docs/: Quickstart.md  README.md  release_notes.md
docs/benchmark/: benchmark_manual.md
docs/cli/: chat_command.md  context_command.md  execution_command.md  introduction.md  mcp_extensions.md  sql_execution.md
docs/configuration/: agent.md  benchmark.md  introduction.md  namespace.md  storage.md
docs/develop/: README.md  directory_structure_migration.md
docs/getting_started/: Quickstart.md
docs/knowledge_base/: introduction.md  metadata.md  metrics.md  sql_history.md
docs/training/: llm_trace_usage.md
docs/workflow/: api.md  datus-workflow.html  introduction.md  nodes.md  orchestration.md
mcp/mcp-metricflow-server/: LICENSE  mcp-metricflow-server  pyproject.toml  test_metricflow_direct.py  test_server_integration.py
mcp/mcp-metricflow-server/docs/: get_dimensions.md  get_entities.md  list_metrics.md  query_metrics.md
mcp/mcp-metricflow-server/src/mcp_metricflow_server/: __init__.py  cli.py  config.py  main.py  prompts.py  server.py  tools.py  types.py
mcp/mcp-metricflow-server/tests/: __init__.py  test_config.py
mcp/mcp-snowflake-server/: README.md  package-lock.json  pyproject.toml  runtime_config.json
mcp/mcp-sqlite-server/: pyproject.toml
tests/: conftest.py  test_claude_model.py  test_cli_rich.py  test_cli_textual.py  test_compress_utils.py  test_configuration_load.py  test_connector_clickzetta.py  test_connector_duckdb.py  test_connector_mysql.py  test_connector_snowflake.py  test_connector_sqlalchemy.py  test_connector_sqlite.py  test_connector_starrocks.py  test_date_parser_cn.py  test_date_parser_en.py  test_db_func_tools.py  test_deepseek_model.py  test_doc_search.py  test_duckdb_connector.py  test_evaluation.py  test_exceptions.py  test_exceptions_sqlalchemy.py  test_external_model_integration.py  test_import_new_db.py  test_input_result.py  test_integration_benchmark.py  test_llm_recall.py  test_loggings.py  test_mcp_tools.py  test_node.py  test_other_models.py  test_planning.py  test_pyarrow_utils.py  test_qwen_model.py  test_schema_linking.py  test_schema_recall_bird.py  test_schema_recall_spider2.py  test_search.py  test_search_metrics.py  test_semantic_model_repository.py  (+9 more)
tests/conf/: agent.yml  wrong_nodes_agent.yml
(+745 files in other folders)
