[project]
name = "mcp-metricflow-server"
description = "A MCP (Model Context Protocol) server for interacting with MetricFlow using local mf CLI commands."
authors = [{ name = "Datus Team", email = "harrison.zhao@datus.ai" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]
dependencies = [
  "mcp>=1.9.2",
  "pydantic>=2.0.0",
  "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.2",
  "mypy>=1.12.1",
  "pre-commit>=4.2.0",
  "pytest-asyncio>=0.26.0",
  "pytest>=8.3.5",
]

[project.urls]
Documentation = "https://github.com/datus-ai/datus-agent/tree/main/mcp/mcp-metricflow-server#readme"
Issues = "https://github.com/datus-ai/datus-agent/issues"
Source = "https://github.com/datus-ai/datus-agent/tree/main/mcp/mcp-metricflow-server"

[project.scripts]
mcp-metricflow-server = "mcp_metricflow_server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/mcp_metricflow_server/**/*", "README.md", "LICENSE"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true 